--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,15 @@
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="service.html">Services</a></li>
                                         <li><a href="menu.html">menu</a></li>
-                                        <li><a href="gallery.html">gallery</a></li>
+                                       
                                         <div class=" d-none d-lg-block">
                                             <a href="index.html">
                                                 <img src="/img/gallery/FE_final_logo.png" alt="" width="180"
                                                     height="120">
                                             </a>
                                         </div>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                         <li><a href="gallery.html">gallery</a></li>
+                                        <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">blog</a></li>
                                                 <li><a href="#">single-blog</a></li>
@@ -61,7 +62,7 @@
                                             <ul class="submenu">
                                                 <li><a href="#">elements</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -92,8 +93,8 @@
         <div class="breadcam_inner">
             <div class="breadcam_text">
                 <h3>Contact</h3>
-                <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br> face higher conduct
-                    standards especially in the workplace. That’s why it’s <br> crucial that, as women.</p>
+                <p>Have questions or want to plan your next event with Fusion Edge?  
+                    We’re here to help! Reach out to us, <br> and our friendly team will guide you through our services, menus, and catering options to make your occasion truly unforgettable</p>
             </div>
         </div>
     </div>
@@ -609,7 +610,7 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                         <div class="media-body">
-                            <h3> +91 123456789</h3>
+                            <h3> +91 9944077113</h3>
                             <!-- <p>Mon to Fri 9am to 6pm</p> -->
                         </div>
                     </div>
