--- a/index.html
+++ b/index.html
@@ -44,24 +44,25 @@
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="service.html">Services</a></li>
                                         <li><a href="menu.html">menu</a></li>
-                                        <li><a href="gallery.html">gallery</a></li>
+                                        
                                         <div class=" d-none d-lg-block">
                                             <a href="index.html">
                                                 <img src="/img/gallery/FE_final_logo.png" alt="" width="180"
                                                     height="120">
                                             </a>
                                         </div>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                        <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">blog</a></li>
                                                 <li><a href="#">single-blog</a></li>
                                             </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        </li> -->
+                                        <li><a href="gallery.html">gallery</a></li>
+                                        <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">elements</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -133,71 +134,51 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-60">
-                        <h3>Our Services</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards <br> especially in the workplace. That’s why it’s crucial that, as women.</p>
+                        <h3>Cloud Kitchen</h3>
+                        <p>Welcome to Fusion Edge – where innovative fusion of flavours meets taste!
+                            Founded in 2025, Fusion Edge was born out of a passion for delivering premium, fusion
+                            of flavors straight to your doorstep. We specialize in crafting rich, aromatic cuisines and
+                            a variety of delicious dishes, all prepared with the finest ingredients and the expertise of
+                            our top chefs.
+                            Our cloud kitchen is dedicated to bringing you the perfect balance of taste and
+                            convenience. Every meal is cooked fresh, packed with care, and delivered hot – ensuring
+                            you experience the true essence of flavor in every bite.
+                            At Fusion Edge, we believe that good food creates great memories. Join us on a culinary
+                            journey where every bite feels like home!</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-6 d-flex">
                     <div class="single_service">
                         <div class="service_icon">
                             <i class="flaticon-gift"></i>
                         </div>
-                        <h4>Birthday Catering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <h4>Christmas party catering</h4>
+                        <p>Gather your guests and celebrate the festivities in style with Christmas party catering,
+                            making
+                            your event feel extra special</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-6 d-flex">
                     <div class="single_service">
                         <div class="service_icon">
                             <i class="flaticon-cake"></i>
                         </div>
-                        <h4>Wedding Service</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <h4>Conference catering</h4>
+                        <p>Fusion Edge adds elegance to conferences, seminars, and summits with flexible, sustainable
+                            catering that meets every dietary need — fueling delegates and elevating your event’s
+                            impact.</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-6  d-flex   ">
                     <div class="single_service">
                         <div class="service_icon">
                             <i class="flaticon-dance"></i>
                         </div>
-                        <h4>Party Catering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6">
-                    <div class="single_service">
-                        <div class="service_icon">
-                            <i class="flaticon-calendar"></i>
-                        </div>
-                        <h4>Event Catering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6">
-                    <div class="single_service">
-                        <div class="service_icon">
-                            <i class="flaticon-businessman"></i>
-                        </div>
-                        <h4>Corporate Service</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6">
-                    <div class="single_service">
-                        <div class="service_icon">
-                            <i class="flaticon-running-man"></i>
-                        </div>
-                        <h4>Catering On Demand</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <h4>Outdoor event catering</h4>
+                        <p>Enhance your outside celebration, sporting occasion or festival with Fusion edge, proud to
+                            deliver high-end outdoor event catering in Chennai and beyond.</p>
                     </div>
                 </div>
             </div>
@@ -218,8 +199,7 @@
                                     <p>You will love our execution</p>
                                 </div>
                                 <div class="icon_video">
-                                    <a class="popup-video" href="#"><i
-                                            class="ti-control-play"></i></a>
+                                    <a class="popup-video" href="#"><i class="ti-control-play"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -336,7 +316,8 @@
                         </div>
                         <div class="order_info">
                             <h3><a href="#">Classic Banana Delight</a></h3>
-                            <p>Soft, moist banana cake made with ripe bananas and a touch of vanilla for a comforting treat, perfect with your favorite cup of tea
+                            <p>Soft, moist banana cake made with ripe bananas and a touch of vanilla for a comforting
+                                treat, perfect with your favorite cup of tea
                             </p>
                             <a href="#" class="boxed_btn">Order Now!</a>
                         </div>
@@ -354,8 +335,8 @@
                 <div class="col-xl-12">
                     <div class="section_title white mb-60">
                         <h3>Feedback from Customers</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                            standards <br> especially in the workplace. That’s why it’s crucial that, as women.</p>
+                        <p>Our clients love the exquisite food, impeccable service, and memorable experiences Fusion
+                            Edge delivers</p>
                     </div>
                 </div>
             </div>
@@ -369,8 +350,8 @@
                             <div class="testmonial_author">
                                 <h3>John</h3>
                                 <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
+                                <p>Fusion Edge made our wedding unforgettable! The food was exquisite, the service
+                                    flawless, and every detail was handled with professionalism.</p>
                             </div>
                         </div>
                         <div class="single_testmonial d-flex">
@@ -380,8 +361,9 @@
                             <div class="testmonial_author">
                                 <h3>Adam Nahan</h3>
                                 <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
+                                <p>The team at Fusion Edge turned our corporate seminar into a delightful experience.
+                                    The variety of dishes, attention to dietary needs, and presentation were outstanding
+                                </p>
                             </div>
                         </div>
                         <div class="single_testmonial d-flex">
@@ -391,8 +373,8 @@
                             <div class="testmonial_author">
                                 <h3>Adame Nesane</h3>
                                 <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
+                                <p>We hired Fusion Edge for a private dinner event, and it was spectacular. The creative
+                                    menu and elegant setup made the evening truly memorable</p>
                             </div>
                         </div>
                         <div class="single_testmonial d-flex">
@@ -402,8 +384,9 @@
                             <div class="testmonial_author">
                                 <h3>Adam Nahan</h3>
                                 <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
+                                <p>Their food stations are amazing! From Indian to Mediterranean cuisine, every guest
+                                    found something they loved. The flavors were authentic and beautifully presented.
+                                </p>
                             </div>
                         </div>
                         <div class="single_testmonial d-flex">
@@ -413,21 +396,11 @@
                             <div class="testmonial_author">
                                 <h3>Adame Nesane</h3>
                                 <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
+                                <p>Fusion Edge catered our banquet, and I couldn’t have asked for a better experience.
+                                    Every dish was delicious, and the team handled everything professionally.</p>
                             </div>
                         </div>
-                        <div class="single_testmonial d-flex">
-                            <div class="testmonial_thumb">
-                                <img src="img/post/avatar.webp" alt="" width="90" height="90">
-                            </div>
-                            <div class="testmonial_author">
-                                <h3>Adam Nahan</h3>
-                                <!-- <span>Chief Customer</span> -->
-                                <p>You're had. Subdue grass Meat us winged years you'll doesn't. fruit two also won one
-                                    yielding creepeth third give may never lie alternet food.</p>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -512,6 +485,8 @@
         </div>
     </div>
     <!-- brand_area-end -->
+
+
 
     <!-- footer-start -->
     <footer class="footer_area footer-bg zigzag_bg_1">
