--- a/gallery.html
+++ b/gallery.html
@@ -44,14 +44,14 @@
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="service.html">Services</a></li>
                                         <li><a href="menu.html">menu</a></li>
-                                        <li><a href="gallery.html">gallery</a></li>
+                                        
                                         <div class=" d-none d-lg-block">
                                             <a href="index.html">
                                                 <img src="/img/gallery/FE_final_logo.png" alt="" width="180"
                                                     height="120">
                                             </a>
                                         </div>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                        <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">blog</a></li>
                                                 <li><a href="#">single-blog</a></li>
@@ -61,7 +61,8 @@
                                             <ul class="submenu">
                                                 <li><a href="#">elements</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
+                                         <li><a href="gallery.html">gallery</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -92,8 +93,7 @@
         <div class="breadcam_inner">
             <div class="breadcam_text">
                 <h3>Our Gallery</h3>
-                <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br> face higher conduct
-                    standards especially in the workplace. That’s why it’s <br> crucial that, as women.</p>
+                <p>Explore a visual journey of Fusion Edge’s finest moments. <br> From lavish events and private dinners to creative food displays and vibrant gatherings,<br> our gallery showcases the quality, elegance, and creativity we bring to every occasion. Let the images speak for the experiences we create</p>
             </div>
         </div>
     </div>
