--- a/menu.html
+++ b/menu.html
@@ -44,24 +44,25 @@
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="service.html">Services</a></li>
                                         <li><a href="menu.html">menu</a></li>
-                                        <li><a href="gallery.html">gallery</a></li>
+                                       
                                         <div class=" d-none d-lg-block">
                                             <a href="index.html">
                                                 <img src="/img/gallery/FE_final_logo.png" alt="" width="180"
                                                     height="120">
                                             </a>
                                         </div>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                         <li><a href="gallery.html">gallery</a></li>
+                                        <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">blog</a></li>
                                                 <li><a href="#">single-blog</a></li>
                                             </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        </li> -->
+                                        <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="#">elements</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -92,8 +93,9 @@
         <div class="breadcam_inner">
             <div class="breadcam_text">
                 <h3>Our Menu</h3>
-                <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br> face higher conduct
-                    standards especially in the workplace. That’s why it’s <br> crucial that, as women.</p>
+                <p>Mixing the latest trends with fresh and sustainable ingredients, we love creating deliciously
+inspirational menus. <br> Whether street food for mingling delegates at a networking event or fivecourse
+fine dining Fusion edge signature culinary design will elevate any event</p>
             </div>
         </div>
     </div>
