--- a/about.html
+++ b/about.html
@@ -440,7 +440,7 @@ Perfect for individuals, families, and office meals
 
     <!-- --------- -->
     <!-- footer-start -->
-    <footer class="footer_area footer-bg zigzag_bg_1">
+     <footer class="footer_area footer-bg zigzag_bg_1">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
@@ -489,8 +489,9 @@ Perfect for individuals, families, and office meals
                                 Contact
                             </h3>
                             <ul>
-                                <li><a href="#">123, Food Street, Tasty Nagar, <br> Chennai – 600001,<br> Tamil Nadu,
-                                        India , support@gmail.com,<br> +91 123456789</a></li>
+                                <li><a href="#">FUSION EDGE <br>
+                                        New NO. 33, <br> Old NO. 14, <br> Moosa Street, T.Nagar, Chennai - 600017<br>
+                                        Tamil Nadu, India,<br> +91 9962355364</a></li>
 
                             </ul>
                         </div>
