--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
                     <div class="slider_contant text-center">
                         <h3>Food Catering <br>
                             Service.</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br>
-                            face higher conduct standards especially in the workplace. That’s why it’s <br>
-                            crucial that, as women.</p>
+                        <p>Delighting taste buds, one event at a time. <br> Our catering service blends exquisite flavors, premium ingredients, <br> and flawless presentation to make your occasion unforgettable.</p>
                     </div>
                 </div>
             </div>
@@ -107,9 +105,7 @@
                     <div class="slider_contant text-center">
                         <h3>Food Catering <br>
                             Service.</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br>
-                            face higher conduct standards especially in the workplace. That’s why it’s <br>
-                            crucial that, as women.</p>
+                       <p>Serving excellence on every plate. <br> From weddings to corporate events, our catering brings flavor, style, <br> and unforgettable experiences to your special day.</p>
                     </div>
                 </div>
             </div>
@@ -118,9 +114,7 @@
                     <div class="slider_contant text-center">
                         <h3>Food Catering <br>
                             Service.</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women <br>
-                            face higher conduct standards especially in the workplace. That’s why it’s <br>
-                            crucial that, as women.</p>
+                        <p>Where taste meets celebration! Customized menus, <br> flawless service, and mouthwatering dishes to make your event truly memorable</p>
                     </div>
                 </div>
             </div>
@@ -489,7 +483,7 @@
 
 
     <!-- footer-start -->
-    <footer class="footer_area footer-bg zigzag_bg_1">
+     <footer class="footer_area footer-bg zigzag_bg_1">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
@@ -538,8 +532,9 @@
                                 Contact
                             </h3>
                             <ul>
-                                <li><a href="#">123, Food Street, Tasty Nagar, <br> Chennai – 600001,<br> Tamil Nadu,
-                                        India , support@gmail.com,<br> +91 123456789</a></li>
+                                <li><a href="#">FUSION EDGE <br>
+                                        New NO. 33, <br> Old NO. 14, <br> Moosa Street, T.Nagar, Chennai - 600017<br>
+                                        Tamil Nadu, India,<br> +91 9962355364</a></li>
 
                             </ul>
                         </div>
