--- a/menu.html
+++ b/menu.html
@@ -222,103 +222,105 @@ fine dining Fusion edge signature culinary design will elevate any event</p>
     <!-- order_area_end -->
 
     <!-- footer-start -->
-      <footer class="footer_area footer-bg zigzag_bg_1">
-      <div class="footer-top">
-         <div class="container">
-            <div class="row">
-               <div class="col-xl-2 col-md-6 col-lg-2">
-                  <div class="footer_widget">
-                     <h3 class="heading">
-                        Food Items
-                     </h3>
-                     <ul>
-                        <li><a href="#">Starters</a></li>
-                        <li><a href="#"> Mains</a></li>
-                        <li><a href="#">Salad</a></li>
-                        <li><a href="#">Desserts</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-xl-2 col-md-6 col-lg-2">
-                  <div class="footer_widget">
-                     <h3 class="heading">
-                        Quick Links
-                     </h3>
-                     <ul>
-                        <li><a href="./about.html">About</a></li>
-                        <li><a href="./service.html">Services</a></li>
-                        <li><a href="./menu.html"> Menu</a></li>
-                        <li><a href="./gallery.html">Gallery</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-xl-2 col-md-6 col-lg-2">
-                  <div class="footer_widget">
-                     <h3 class="heading">
-                        Features
-                     </h3>
-                     <ul>
-                        <li><a href="#">Jobs</a></li>
-                        <li><a href="#">Brand Assets</a></li>
-                        <li><a href="#">Privacy & Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-xl-3 col-md-6 col-lg-2">
-                  <div class="footer_widget">
-                     <h3 class="heading">
-                        Contact
-                     </h3>
-                     <ul>
-                        <li><a href="#">123, Food Street, Tasty Nagar, <br> Chennai – 600001,<br> Tamil Nadu, India , support@gmail.com,<br> +91 123456789</a></li>
-                      
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-xl-3 col-md-12 col-lg-4">
-                  <div class="footer_widget">
-                     <h3 class="heading">
-                        Newsletter
-                     </h3>
-                     <p class="offer_text">You can trust us. we only send promo offers,</p>
-                     <form action="#">
-                        <input type="text" placeholder="Your email address">
-                        <button type="submit"> <i class="ti-arrow-right"></i> </button>
-                     </form>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="footer-bottom">
-         <div class="container">
-            <div class="row align-items-center">
-               <div class="col-xl-7 col-md-12 col-lg-8">
-                  <div class="copyright">
-                     <p class="footer-text">
+     <footer class="footer_area footer-bg zigzag_bg_1">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-2 col-md-6 col-lg-2">
+                        <div class="footer_widget">
+                            <h3 class="heading">
+                                Food Items
+                            </h3>
+                            <ul>
+                                <li><a href="#">Starters</a></li>
+                                <li><a href="#"> Mains</a></li>
+                                <li><a href="#">Salad</a></li>
+                                <li><a href="#">Desserts</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-2">
+                        <div class="footer_widget">
+                            <h3 class="heading">
+                                Quick Links
+                            </h3>
+                            <ul>
+                                <li><a href="./about.html">About</a></li>
+                                <li><a href="./service.html">Services</a></li>
+                                <li><a href="./menu.html"> Menu</a></li>
+                                <li><a href="./gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-6 col-lg-2">
+                        <div class="footer_widget">
+                            <h3 class="heading">
+                                Features
+                            </h3>
+                            <ul>
+                                <li><a href="#">Jobs</a></li>
+                                <li><a href="#">Brand Assets</a></li>
+                                <li><a href="#">Privacy & Policy</a></li>
+                                <li><a href="#">Terms of Service</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 col-lg-2">
+                        <div class="footer_widget">
+                            <h3 class="heading">
+                                Contact
+                            </h3>
+                            <ul>
+                                <li><a href="#">FUSION EDGE <br>
+                                        New NO. 33, <br> Old NO. 14, <br> Moosa Street, T.Nagar, Chennai - 600017<br>
+                                        Tamil Nadu, India,<br> +91 9962355364</a></li>
 
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script>
-                        Fusion Edge All rights reserved | Supported by <a href="https://younderbots.com/"
-                           class=" h5">Younder Bots </a>
-                     </p>
-                  </div>
-               </div>
-               <div class="col-xl-5 col-md-12 col-lg-4">
-                  <div class="social_links">
-                     <ul>
-                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                        <li><a href="#"> <i class="fa fa-whatsapp"></i> </a></li>
-                        <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                     </ul>
-                  </div>
-               </div>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-12 col-lg-4">
+                        <div class="footer_widget">
+                            <h3 class="heading">
+                                Newsletter
+                            </h3>
+                            <p class="offer_text">You can trust us. we only send promo offers,</p>
+                            <form action="#">
+                                <input type="text" placeholder="Your email address">
+                                <button type="submit"> <i class="ti-arrow-right"></i> </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-   </footer>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-7 col-md-12 col-lg-8">
+                        <div class="copyright">
+                            <p class="footer-text">
+
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script>
+                                Fusion Edge All rights reserved | Supported by <a href="https://younderbots.com/"
+                                    class=" h5">Younder Bots </a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-5 col-md-12 col-lg-4">
+                        <div class="social_links">
+                            <ul>
+                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-whatsapp"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- footer-end -->
 
 
