--- a/service.html
+++ b/service.html
@@ -356,8 +356,9 @@
                                 Contact
                             </h3>
                             <ul>
-                                <li><a href="#">123, Food Street, Tasty Nagar, <br> Chennai – 600001,<br> Tamil Nadu,
-                                        India , support@gmail.com,<br> +91 123456789</a></li>
+                                <li><a href="#">FUSION EDGE <br>
+                                        New NO. 33, <br> Old NO. 14, <br> Moosa Street, T.Nagar, Chennai - 600017<br>
+                                        Tamil Nadu, India,<br> +91 9962355364</a></li>
 
                             </ul>
                         </div>
